Fix issue with Pin grid to map checkbox and label wrapping to separate lines

--- a/app/assets/stylesheets/partials/compose.scss
+++ b/app/assets/stylesheets/partials/compose.scss
@@ -211,9 +211,7 @@ SIDE MENU
   .private-map,
   #map-lock-box,
   .add-ons {
-    width: 90%;
     color: #666;
-    display: inline;
 
     label {
       display: inline;
